@@ -1,6 +1,7 @@
 2013-07-06  Bruce Korb  <bkorb@gnu.org>
 
 	* inclhack.def (cdef_cplusplus): removed, per Bug 51776
+	* tests/base/sys/cdefs.h (CDEF_CPLUSPLUS_CHECK): obsolete
 
 2013-05-23  Alexander Ivchenko <alexander.ivchenko@intel.com>
 
